# MailPilot

./: .replit  README.md  __main__.py  setup.py
.github/workflows/: python-package.yml
MailPilot/: README.md  requirements.txt  setup.cfg  setup.py
MailPilot/docs/: configuration.md  usage.md
MailPilot/examples/: example_usage.py
MailPilot/examples/html/: email_template_example.html
MailPilot/examples/json/: another_example.json  recipients_example.json
MailPilot/mailpilot/: __init__.py  mailpilot.py
MailPilot/tests/: test__init__.py
docs/: CONTRIBUTING.md  installation.md  usage.md
examples/: README.md
examples/html/: another_template.html
mailpilot/: config.py  utils.py
tests/: test_config.py  test_mailpilot.py  test_utils.py
