[metadata]
name = MailPilot
version = 1.0.0
author = Yağız Erkam '@plawlost' Çelebi
author_email = contact@plawlost.com
description = A versatile email sending tool for personalized mass mailing.
url = https://github.com/plawlost/MailPilot
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    mailpilot = mailpilot.__main__:main

[options.package_data]
mailpilot = templates/*.html, config/*.ini
